# skema

./: Setup.hs  Setup.lhs  skema.cabal  test01.lhs
data/: example01.skm  example02.skm  opencl.lang  pf_preview.glade  pf_test.glade  skema.glade
docs/: gpl3_header  relacion.org  simple.ods  waterfall.ods
docs/imgs/: icono.xcf
po/: en.po  es.po  messages.pot
src/: Skema.lhs  skema_client_main.lhs  skema_main.hs  skema_main.lhs  test01.lhs
src/Skema/: Client.lhs  Network.lhs  ProgramFlow.lhs  SkemaDoc.hs  SkemaDoc.lhs  Types.lhs  Util.lhs  VisualCore.lhs
src/Skema/Block/: Function.lhs
src/Skema/Editor/: Canvas.hs  Canvas.lhs  MainWindow.hs  MainWindow.lhs  NodeCLWindow.hs  NodeCLWindow.lhs  PFPreviewWindow.hs  PFPreviewWindow.lhs  SkemaDoc.hs  SkemaState.hs  SkemaState.lhs  TestProgramWindow.hs  Types.hs  Types.lhs  Util.hs  Util.lhs
src/test/: Properties.hs  Properties.lhs  skema_test.hs  skema_test.lhs
tests/: Properties.lhs
