Name:          skema
Version:       0.2.0
Cabal-Version: >=1.8
Description:   Skema Platform Editor
License:       GPL
License-file:  LICENSE
Author:        Luis Cabellos
Maintainer:    cabellos@ifca.unican.es
Build-Type:    Simple
Data-Dir:      data
Data-Files:    *.glade, *.skm, *.lang

flag coverage
    description: Code coverage enabled
    default: False

flag testing
    description: Testing mode
    default: False

Library
  hs-source-dirs:  src
  ghc-options:     -Wall
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*, random==1.0.*, 
                   containers==0.4.*, json==0.4.*, HTTP==4000.1.*, 
                   network==2.3.*, cairo==0.12.*, gtk==0.12.*, glade==0.12.*, 
                   glib==0.12.*, gtksourceview2==0.12.*
  Exposed-modules: 
    Skema
    Skema.Network
    Skema.Util
    Skema.Types
    Skema.SkemaDoc
    Skema.ProgramFlow
    Skema.Block.Function
    Skema.Editor.Canvas
    Skema.Editor.MainWindow
    Skema.Editor.Util
    Skema.Editor.SkemaState
  if flag(testing)
    buildable: False

Executable skema
  hs-source-dirs:  src
  ghc-options:     -Wall
  ghc-prof-options: -prof -auto-all
  Main-is:         skema_main.lhs
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*,
                   containers==0.4.*, json==0.4.*, 
                   cairo==0.12.*, gtk==0.12.*, glade==0.12.*, glib==0.12.*,
                   gtksourceview2==0.12.*

  if flag(coverage)
    ghc-options:   -fhpc

  if flag(testing)
    buildable: False

  if flag(testing)
    cpp-options:   -DTESTING
    hs-source-dirs: src tests
    build-depends: QuickCheck >= 2
    ghc-options:   -fhpc -Werror

Executable skema-client
  hs-source-dirs:  src
  ghc-options:     -Wall
  ghc-prof-options: -prof -auto-all
  Build-Depends:   base==4.*
  Main-is:         skema_client_main.lhs

  if flag(coverage)
    ghc-options:   -fhpc

  if flag(testing)
    buildable: False

Executable skema-test
  hs-source-dirs:  src tests
  ghc-options:     -Wall -fhpc -Werror
  Main-is:         skema_test.lhs
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*,
                   containers==0.4.*, json==0.4.*, QuickCheck >= 2
  cpp-options:   -DTESTING

  if flag(testing)
    buildable: True
  else
    buildable: False
