Name:          skema
Version:       0.4.0
Cabal-Version: >=1.8
Description:   Skema Platform Editor
License:       GPL
License-file:  LICENSE
Author:        Luis Cabellos
Maintainer:    cabellos@ifca.unican.es
Build-Type:    Simple
Data-Dir:      data
Data-Files:    *.glade, *.skm, *.lang
Extra-Source-Files: po/*.po po/*.pot

x-gettext-po-files: po/*.po 

flag coverage
    description: Code coverage enabled
    default: False

flag testing
    description: Testing mode
    default: False

Library
  hs-source-dirs:  src
  ghc-options:     -Wall
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*, containers==0.4.*, json==0.4.*, cairo==0.12.*, gtk==0.12.*, glade==0.12.*, glib==0.12.*, gtksourceview2==0.12.*, skema-common==0.1.*
  Exposed-modules: 
    Skema
    Skema.SkemaDoc
    Skema.Editor.Canvas
    Skema.Editor.MainWindow
    Skema.Editor.Util
    Skema.Editor.Types
    Skema.Editor.SkemaState
  if flag(testing)
    buildable: False

Executable skema
  hs-source-dirs:  src
  ghc-options:     -Wall
  ghc-prof-options: -prof -auto-all
  Main-is:         skema_main.lhs
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*, containers==0.4.*, json==0.4.*, cairo==0.12.*, gtk==0.12.*, glade==0.12.*, glib==0.12.*, gtksourceview2==0.12.*,skema-common==0.1.*, hgettext==0.1.*, setlocale==0.0.3

  if flag(coverage)
    ghc-options:   -fhpc
  if flag(testing)
    buildable: False

Executable skema-test
  hs-source-dirs:  src src/test
  ghc-options:     -Wall -fhpc -Werror
  Main-is:         skema_test.lhs
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*, containers==0.4.*, json==0.4.*, QuickCheck >= 2, cairo==0.12.*, glib==0.12.*, gtk==0.12.*, glade==0.12.*, gtksourceview2==0.12.*, skema-common==0.1.*
  cpp-options:   -DTESTING

  if flag(testing)
    buildable: True
  else
    buildable: False
