Name:          skema
Version:       0.4.0
Synopsis:      Skema Platform Editor
Description:   Skema Platform is a framework for distributed workflows executed on GPUs. This is the editor application for generate Skema Programs.
License:       GPL
License-file:  LICENSE
Author:        Luis Cabellos
Maintainer:    cabellos@ifca.unican.es
Category:      Visual Programming, Workflow, Distributed Computing, GPU
Build-Type:    Simple
Cabal-Version: >=1.8
Data-Dir:      data
Data-Files:    *.glade, *.lang
Extra-Source-Files: po/*.po po/*.pot

x-gettext-po-files: po/*.po 

flag coverage
    description: Code coverage enabled
    default: False

flag testing
    description: Testing mode
    default: False

Library
  hs-source-dirs:  src
  ghc-options:     -Wall
  Build-Depends:   base==4.3.*, mtl==2.0.1.*, transformers==0.2.*, containers==0.4.0.*, json==0.4.*, cairo==0.12.*, gtk==0.12.*, glade==0.12.*, glib==0.12.*, gtksourceview2==0.12.*, aeson==0.4.0.*, skema-common==0.3.*
  Exposed-modules: 
    Skema.Editor.SkemaDoc
    Skema.Editor.Canvas
    Skema.Editor.MainWindow
    Skema.Editor.Util
    Skema.Editor.Types
    Skema.Editor.SkemaState
  if flag(testing)
    buildable: False

Executable skema
  hs-source-dirs:  src
  ghc-options:     -Wall
  ghc-prof-options: -prof -auto-all
  Main-is:         skema_main.hs
  Build-Depends:   base==4.3.*, mtl==2.0.1.*, transformers==0.2.*, containers==0.4.0.*, json==0.4.*, cairo==0.12.*, gtk==0.12.*, glade==0.12.*, glib==0.12.*, gtksourceview2==0.12.*, aeson==0.4.0.*, skema-common==0.3.*, hgettext==0.1.*, setlocale==0.0.3

  if flag(coverage)
    ghc-options:   -fhpc
  if flag(testing)
    buildable: False

Test-Suite skema-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  src src/test
  ghc-options:     -Wall -fhpc -Werror
  Main-is:         skema_test.hs
  Build-Depends:   base==4.*, mtl==2.0.*, transformers==0.2.*, containers==0.4.*, json==0.4.*, QuickCheck >= 2, cairo==0.12.*, glib==0.12.*, gtk==0.12.*, glade==0.12.*, gtksourceview2==0.12.*, skema-common==0.3.*, aeson==0.4.0.*
  cpp-options:   -DTESTING
